// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha.event_templates.testing;

import "wfa/measurement/api/v2alpha/event_annotations.proto";

option java_package = "org.wfanet.measurement.api.v2alpha.event_templates.testing";
option java_multiple_files = true;

// Template with information about a person related to an event.
//
// For example, if the event is an ad impression then this may be used for
// information about the person viewing the ad.
message Person {
  option (.wfa.measurement.api.v2alpha.event_template) = {
    name: "person"
    display_name: "Person"
    description: "Common fields about a person"
  };

  enum Gender {
    GENDER_UNSPECIFIED = 0;
    MALE = 1;
    FEMALE = 2;
  }
  message GenderField {
    option (.wfa.measurement.api.v2alpha.event_field) = {
      display_name: "Gender"
    };

    Gender value = 1;
  }

  enum AgeGroup {
    AGE_GROUP_UNSPECIFIED = 0;
    YEARS_18_TO_34 = 1;
    YEARS_35_TO_54 = 2;
    YEARS_55_PLUS = 3;
  }
  message AgeGroupField {
    option (.wfa.measurement.api.v2alpha.event_field) = {
      display_name: "Age Group"
    };

    AgeGroup value = 1;
  }

  enum SocialGradeGroup {
    SOCIAL_GRADE_GROUP_UNSPECIFIED = 0;
    A_B_C1 = 1;
    C2_D_E = 2;
  }
  message SocialGradeGroupField {
    option (.wfa.measurement.api.v2alpha.event_field) = {
      display_name: "Social Grade"
    };

    SocialGradeGroup value = 1;
  }

  int64 vid = 1;
  GenderField gender = 2;
  AgeGroupField age_group = 3;
  SocialGradeGroupField social_grade = 4;
}
